Mon Oct 24 04:04:26 UTC 2006  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/Hash_Map_Manager_T.h (lock_):

          Placed "mutable" keyword to beginning of declaration.  It is a
          storage class specifier, not a CV qualifier, and belongs at the
          beginning.  Addresses g++ warnings.
        
        * ace/Sock_Connect.cpp (get_fqdn):

          Addressed "might be used uninitialized warnings.

Mon Oct 23 02:28:42 UTC 2006  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/Array_Base.cpp:
        * ace/Array_Base.h:
        * ace/Array_Base.inl:

          Added STL-style traits, iterators and swap() method.

          (operator=):

          Improved exception-safety.

        * ace/Array_Map.h:
        * ace/config-lite.h:

          Moved reverse_iterator declarations to a new
          ACE_DECLARE_STL_REVERSE_ITERATORS so that other ACE containers
          may use them in a way that minimizes platform-specific
          declaration duplication.
        
        * ace/CDR_Stream.cpp (read_boolean_array):

          Addressed a Coverity CHECKED_RETURN error.  There's no need to
          check the return value of read_boolean() in this case.
          Explicitly cast the return value to "void".

          Addressed Coverity DEADCODE error.  No need to check for zero
          "cont" pointer since the ACE_NEW_RETURN() call that initializes
          it will return immediately.  "cont" cannot be zero if the latter
          call succeeds.

        * ace/CDR_Stream.inl (operator>>):

          Explicitly check return value of input stream read operations.
          Addressed a Coverity CHECKED_RETURN errors.

        * ace/Configuration.cpp (new_section):

          Fixed Coverity USE_AFTER_FREE error.  Memory was being accessed
          after it was freed.

        * ace/Configuration_Import_Export.cpp:

          Addressed Coverity RESOURCE_LEAK errors.
